--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,18 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: tirpox
 github_username:  GergelyToth
+google_analytics: UA-58439695-2
+disqus:
+    shortname: gergelytoth
 
 # Build settings
 markdown: kramdown
 theme: minima
 plugins:
-  - jekyll-feed
+    - jekyll-feed
+
+collections:
+    - projects
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
