--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: tgergely18@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
     programmer, gamer
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://gergelytoth.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: tirpox
 github_username:  GergelyToth
 google_analytics: UA-58439695-2
